k8s/producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer-service
  template:
    metadata:
      labels:
        app: producer-service
    spec:
      containers:
        - name: producer-service
          image: producer-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: producer-service
spec:
  selector:
    app: producer-service
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
