k8s/producer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: producer-ingress
spec:
  rules:
    - host: group30.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: producer-service
                port:
                  number: 8080
